# libPosixRandom

./: CMakeLists.txt  README
src/: random.c  random.h
